Decouple SerializableLambdaReader from spring-tx.
Since we're using the SerializableLambdaReader from within a GraalVM Feature it needs to operate without references to types potentially not present at build time.

Original Pull Request: #3466